<resources>
    <string name="app_name">HealthCare</string>

    <string name="mobileValidationDigits">0123456789</string>
    <string name="nameDigits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphanumericValidationDigits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890</string>
    <string name="userIDalphanumericValidationDigits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="passwordValidation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890,./-!#$%&amp;\'*+-/=?^_`{|}~.@</string>
    <string name="emailIDandMobilenumberValidation">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!#$%&amp;\'*+-/=?^_`{|}~.@</string>


    <string name="permissionDenied">Permission Denied\n</string>
    <string name="permissionRejectedMsg"><![CDATA["If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > Permission "]]></string>
    <string name="permissionToDownloadFile">We need permission to download file in your device.</string>
    <string name="permissionToCallMsg">We need permission to make call from your device.</string>
    <string name="PleaseWait">Please wait..</string>
    <string name="invalidURL">Invalid URL</string>
    <string name="strOK">OK</string>
    <string name="strFetchArticles">Fetch Articles</string>
    <string name="clicktoFetchArticles">Click on button to Fetch Articles.</string>
    <string name="clicktoFetchArticlesaAgain">Click on button to Fetch Articles again.</string>
    <string name="articlesFetchCDmsg">"Articles will be fetched in "</string>
    <string name="readMore">Read more</string>
    <string name="strPermissionToDownloadImage">We need permission to download and share the image.</string>
    <string name="CheckInternetConnection">Please check your internet connection.</string>
    <string name="strNoDatafound">No data found</string>
    <string name="strPleasewait">Please wait...</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="or">or</string>
    <string name="phone">Mobile no*</string>
    <string name="password">Password*</string>
    <string name="email">Email (Optional)</string>
    <string name="firstname">First name*</string>
    <string name="lastname">Last name*</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="strValidate">Validate</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="HealthCare">Health-Care</string>
    <string name="logout">Logout</string>
    <string name="URLIntent">Url_intent</string>
    <string name="UrlNotFound">Url not found</string>
    <string name="WebViewHeader">WebViewHeader</string>
    <string name="Exit">Exit</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="areyousure">Are you sure?</string>
    <string name="LoginSuccessfull">Login Successful</string>
    <string name="invalidUserAndPassword">Invalid UserId or Password</string>
    <string name="alert">Alert</string>
    <string name="userAlreadyRegistered">User already registered by this mobile no.</string>
    <string name="enterOtpsendToMob">"Enter the OTP send to Mobile no. "</string>
    <string name="userRegisteredSuccessfully">User Registered Successful</string>
    <string name="loginViaMobandPass">Please Login via your Mobile no and Password</string>
    <string name="invalidOTP">Invalid OTP</string>
</resources>