<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/scrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context=".acitivites.SignUpActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <TextView
        android:id="@+id/labelSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textAlignment="textStart"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstnameTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="text"
            android:maxLength="30"
            android:digits="@string/nameDigits"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:maxLength="30"
            android:inputType="text"
            android:textSize="@dimen/_13sdp"
            android:digits="@string/nameDigits"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:digits="@string/mobileValidationDigits"
            android:textSize="@dimen/_13sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLength="50"
            android:inputType="text"
            android:digits="@string/emailIDandMobilenumberValidation"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:digits="@string/passwordValidation"
            android:textSize="@dimen/_13sdp"
            android:maxLength="16"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpasswordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:digits="@string/passwordValidation"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/roundcorner_forbutton"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpasswordTIL"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/labelOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/or"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <View
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/labelOr"
        app:layout_constraintEnd_toStartOf="@+id/labelOr"
        app:layout_constraintTop_toTopOf="@+id/labelOr" />

    <View
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/labelOr"
        app:layout_constraintStart_toEndOf="@+id/labelOr"
        app:layout_constraintTop_toTopOf="@+id/labelOr" />


    <TextView
        android:id="@+id/labelAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/already_have_an_account"
        android:textColor="#a8acb1"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelOr"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAlreadyAccount"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>