<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/scrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".acitivites.SignInActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <TextView
        android:id="@+id/labelSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/sign_in"
        android:textAlignment="textStart"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MobileTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:maxLength="10"
            android:digits="@string/mobileValidationDigits"
            android:inputType="phone"
            android:textSize="@dimen/_14sdp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MobileTIL"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/_14sdp"
            android:maxLength="16"
            android:digits="@string/passwordValidation"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/roundcorner_forbutton"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/labelOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/or"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <View
        android:layout_width="@dimen/_20sdp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/labelOr"
        app:layout_constraintEnd_toStartOf="@+id/labelOr"
        app:layout_constraintTop_toTopOf="@+id/labelOr" />

    <View
        android:layout_width="@dimen/_20sdp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_14sdp"
        android:background="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@+id/labelOr"
        app:layout_constraintStart_toEndOf="@+id/labelOr"
        app:layout_constraintTop_toTopOf="@+id/labelOr" />


    <TextView
        android:id="@+id/labelNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#a8acb1"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelOr"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        
        android:text="@string/sign_up"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNoAccount"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>