<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:src="@drawable/ic_close"
        android:layout_margin="@dimen/_10sdp"
        android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_below="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:gravity="center_horizontal" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_otp"
        android:layout_below="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterOTP"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:inputType="phone"
        android:maxLength="4"
        android:digits="@string/mobileValidationDigits"
        android:textSize="@dimen/_13sdp" />



    <android.widget.Button
        android:id="@+id/btn_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_otp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/roundcorner_forbutton"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/strValidate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />


</RelativeLayout>